--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.3",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "world-countries": "^4.0.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/leaflet": "^1.9.3",
+    "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "prisma": "^4.14.1"
   }
